--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<img src="chicago.png">
-<script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js">
+<body></body>
 
-function randomUChi (){
-
-}
-
-  function randomColor(){
+<script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script> 
+<script>
+function skyColor(){
   const r = Math.random()*255
   const g = Math.random()*255
   const b = Math.random()*255
@@ -13,7 +10,21 @@ function randomUChi (){
   return color
 }
 
- document.body.style.backgroundColor = randomColor
-window.addEventListener('click',randomUChi)
+  let bg;
+  function background(){
+    bg = loadImage('assets/moonwalk.jpg');
+  }
+  
+  function setup(){
+    createCanvas(2048 , 942)
+  }
+
+  function draw(){
+      background(bg);
+  }
+  
+document.body.style.backgroundColor = skyColor()
+
+
 
 </script>
