--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body></body>
 
-<script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script> 
+<script src="p5.js"></script>
 <script>
 function skyColor(){
   const r = Math.random()*255
@@ -12,11 +12,13 @@ function skyColor(){
 
   let bg;
   function background(){
-    bg = loadImage('assets/moonwalk.jpg');
+    const gif = document.createElement('img')
+    gif.src = 'chicago.png'
+   // bg = loadImage('chicago.png');
   }
   
   function setup(){
-    createCanvas(2048 , 942)
+  createCanvas(2048 , 942)
   }
 
   function draw(){
