--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <body></body>
 <!-- <script src="p5.js"></script> -->
+<div class="slidecontainer">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+</div>
 <script>
+  
   
   function scale (number, inMin, inMax, outMin, outMax) {
     return (number - inMin) * (outMax - outMin) / (inMax - inMin) + outMin;
 }
+  
+    function magritte1() {
+    const gif = document.createElement('img')
+    gif.src = 'magrittemen.gif'
+    gif.style.position = 'absolute'
+    gif.style.top = 0 + 'px'
+    gif.style.left = 0 + 'px'
+    gif.style.bottom = 0 + 'px'
+    gif.style.width = window.innerWidth + 'px'
+    document.body.appendChild(gif)
+  }
+  
+  magritte1()
+  
+  const slider = document.createElement("input");
+slider.type = "range";
+slider.min = "0";
+slider.max = "100";
+slider.value = "50";
+  
+  console.log(slider)
+  
+  document.body.appendChild(slider);
+  
+  //written using chatgpt
+  slider.style.width = "100%";
+slider.style.height = "10px";
+slider.style.background = "#ddd";
+slider.style.opacity = "1";
   
   class WeatherGIF {
     constructor(settings) {
@@ -43,7 +76,8 @@
     gif.style.position = 'absolute'
     gif.style.top = 300 + 'px'
     gif.style.left = 0 + 'px'
-    gif.style.bottom = 200 + 'px'
+    gif.style.bottom = 0 + 'px'
+    gif.style.width = window.innerWidth + 'px'
     document.body.appendChild(gif)
   }
 
@@ -71,6 +105,7 @@
     createChicago()
   //  gif1 = new WeatherGIF(20, 30, 20, 50, 'winky.gif')
  //   gif2 = new WeatherGIF(50, 150, 50, 40, 'winky.gif')
+    // i < sliderValue which controls number of gifs
     for (let i = 0; i < 100; i++) {
       
 			const g = new WeatherGIF({
@@ -93,6 +128,10 @@
       gifJar[i].windDir = scale(e.x, 0, window.innerWidth, 0, 40)
     }
   }
+  
+  slider.addEventListener("input", function() {
+  console.log("Slider value: ", slider.value);
+});
 
   window.addEventListener('load', setup)
   window.addEventListener('load', draw)
