--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
     function magritte1() {
     const gif = document.createElement('img')
+    gid.id = 'magritteMen'
     gif.src = 'magrittemen.gif'
     gif.style.position = 'absolute'
     gif.style.top =  200 + 'px'
